Security: Replaced real phone number with dummy data in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Customer Data (Required for Checkout)
-CUSTOMER_FIRSTNAME=Shoaib
-CUSTOMER_LASTNAME=Latif
-CUSTOMER_EMAIL=test_qa@example.com
+CUSTOMER_FIRSTNAME=John
+CUSTOMER_LASTNAME=Doe
+CUSTOMER_EMAIL=john.doe@example.com
 CUSTOMER_CITY=Lahore
-CUSTOMER_ADDRESS=123 Main St
+CUSTOMER_ADDRESS=Street 123
 CUSTOMER_ZIP=54000
-CUSTOMER_PHONE=03118444302
+CUSTOMER_PHONE=03001234567
