--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@playwright/test": "^1.58.1",
     "@types/node": "^25.2.1",
     "dotenv": "^17.2.4",
-    "playwright-report": "^1.2.1"
+    "playwright-report": "^1.2.1",
+    "xlsx": "^0.18.5"
   }
 }
